--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<h1> Time and Space Complexity</hq>
+	<h1> Time and Space Complexity</h1>
 </head>
 	<body>
 	<p><h2>Time complexity is understood as the time taken by a program to run and complete the given task. For example, if a program takes 100 seconds to run while another program completes the same task in 200 seconds, then clearly the first program has low time complexity. Therefore, as a programmer, your goal is to reduce the time complexity of the code by optimizing it and making it more efficient.</h2></p>
